[package]
name = "fluster_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
clap = { version = "4.5.41", features = ["derive"] }
crc32c = "0.6.8"
ctrlc = "3.4.7"
# Multithreading on floppy would be so silly. Serial only.
easy_fuser = { version = "0.4.1", features = ["serial"] }
lazy_static = "1.5.0"
rand = "0.9.1"
rprompt = "2.2.0"
thiserror = "2.0.12"
